# super-ai-text-soccer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  action_generator.py  babel.cfg  flavors.json  main.py  output  phrases.json  prompts_experiments.txt  pyproject.toml  requirements.txt
text_calcio/: action.py  ai.py  display.py  loader.py  match_state.py  stadium.py  team.py  test_controller.py
text_calcio/cli/: controller.py  display.py  i18n.py
text_calcio/loaders/: action.py  action_provider.py  flavor.py  serialization.py
text_calcio/loaders/ai/: action_loader.py  api_models.py  prompt.py
text_calcio/locale/it/LC_MESSAGES/: messages.po
text_calcio/resources/: config.json
text_calcio/state/: match.py  match_action.py  match_config.py  match_phase.py  match_stats.py  match_time.py  penalty.py  stadium.py  team.py
text_calcio/test/: test_controller.py  test_display.py
