[tool.poetry]
name = "super-ai-text-soccer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
aioconsole = "^0.7.1"
attr = "^0.3.2"
cattrs = "^23.2.3"
frozendict = "^2.4.4"
numpy = "^2.1.0"
openai = "^1.42.0"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.2"
tabulate = "^0.9.0"
termcolor = "^2.4.0"
ruff = "^0.6.2"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
